--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "test": "mocha --reporter mocha-junit-reporter -R spec src/**/*.spec.js",
+    "test": "JUNIT_REPORT_PATH=/report.xml  mocha --colors --reporter mocha-jenkins-reporter -R spec src/**/*.spec.js",
     "bowerInstall": "bower install",
     "bowerInstallDocker": "bower install --allow-root"
   },
@@ -31,6 +31,6 @@
     "mocha": "^5.2.0",
     "nock": "^9.0.14",
     "nodemon": "^1.12.0",
-    "mocha-junit-reporter":"^1.18.0"
+    "mocha-jenkins-reporter": "0.4.1"
   }
 }
